--- a/Lesson-3/1/index.html
+++ b/Lesson-3/1/index.html
@@ -2,7 +2,7 @@
 <html lang="ru"> 
 <head> 
 	<meta charset="UTF-8">
-  <title>Hello World</title>
+  <title>Hello</title>
   <link rel="stylesheet" href="style.css">
 </head>  
 <body>  
